자동 예약 80-90% 완료 / 건강수첩에 진료 기록 간략 표시 (추후 예약현황탭 건강수첩에 통합 예정)